<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.assignment02</groupId>
  <artifactId>DependencyAnalyserLib</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>DependencyAnalyserLib</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <dependencies>
	<!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
	<dependency>
    	<groupId>io.vertx</groupId>
    	<artifactId>vertx-core</artifactId>
    	<version>4.5.14</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
	<dependency>
    	<groupId>io.vertx</groupId>
	    <artifactId>vertx-web</artifactId>
	    <version>4.5.14</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.reactivex/rxjava -->	
	<!-- https://mvnrepository.com/artifact/io.reactivex.rxjava3/rxjava -->	
	<dependency>
    	<groupId>io.reactivex.rxjava3</groupId>
    	<artifactId>rxjava</artifactId>
    	<version>3.1.10</version>
	</dependency>
    <dependency>
        <groupId>com.github.javaparser</groupId>
        <artifactId>javaparser-core</artifactId>
        <version>3.25.4</version>
    </dependency>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.9.2</version>
        <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>org.graphstream</groupId>
        <artifactId>gs-core</artifactId>
        <version>2.0</version>
    </dependency>
    <dependency>
        <groupId>org.graphstream</groupId>
        <artifactId>gs-ui-swing</artifactId>
        <version>2.0</version>
    </dependency>
  </dependencies>
  <build>
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
     	<plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-shade-plugin</artifactId>
        	<version>3.6.0</version>
        	<executions>
          		<execution>
            		<phase>package</phase>
 	 		        <goals>
              			<goal>shade</goal>
            		</goals>
            		<configuration>
              			<transformers>
                			<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  				<mainClass>pcd.ass02.dependencyAnalyserLib.impl.DependencyAnalyserLibImpl</mainClass>
                			</transformer>
              			</transformers>
            		</configuration>
          		</execution>
        	</executions>
      	</plugin>
<!--
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.6.1</version>
        </plugin> -->
      </plugins>
  </build>
</project>
